apps/argocd/deploy/local/releases/argocd-ui/traefik-ingress/templates/middleware.yaml
---
# Source: traefik-ingress/templates/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: argocd
  labels:
    helm.sh/chart: traefik-ingress-0.1.0
    app.kubernetes.io/name: https-redirect
    app.kubernetes.io/instance: argocd-ui
    app.kubernetes.io/managed-by: Helm
spec:
  redirectScheme:
    permanent: true
    scheme: https
